# MesonDBug

./: gen.py  meson.build  test_struct.json
cpp/: cpp.py  main.cpp  meson.build
d/: d.py  main.d  meson.build
rust/: main.rs  meson.build  rust.py
vala/: main.vala  meson.build  vala.py
